@@ -1,3 +1,9 @@
+2005-08-23  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* win/tkWin32Dll.c (DllMain): Replace old asm SEH
+	approach with Kenny's new SEH implementation.
+	[Tcl bug 1235544]
+
 2005-08-22  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXButton.c:
